menu overflow bugfix

--- a/src/components/organisms/MenuLoggedIn/index.scss
+++ b/src/components/organisms/MenuLoggedIn/index.scss
@@ -72,6 +72,12 @@
           margin-right: 16px;
         }
       }
+
+      @media (min-width: map-get($breakpoints, "small")) {
+        .profile {
+          overflow: hidden;
+        }
+      }
     }
   }
 }
